# src/main/java/com/team2a/ProjectPortfolio/Controllers/AccountController.java
@@ -1,0 +1,41 @@
+package com.team2a.ProjectPortfolio.Controllers;
+
+import com.team2a.ProjectPortfolio.Commons.Account;
+import com.team2a.ProjectPortfolio.CustomExceptions.DuplicatedUsernameException;
+import com.team2a.ProjectPortfolio.CustomExceptions.FieldNullException;
+import com.team2a.ProjectPortfolio.Repositories.AccountRepository;
+import com.team2a.ProjectPortfolio.Routes;
+import com.team2a.ProjectPortfolio.Services.AccountService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping(Routes.ACCOUNT)
+public class AccountController {
+
+    private final AccountService accountService;
+
+    @Autowired
+    public AccountController(AccountService accountService) {
+        this.accountService = accountService;
+    }
+
+    @PostMapping("/")
+    public ResponseEntity<Account> createAccount(@RequestBody Account account) {
+        try {
+            return ResponseEntity.ok(accountService.createAccount(account));
+        }
+        catch(FieldNullException e){
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
+        }
+        catch(DuplicatedUsernameException e){
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        }
+    }
+}
