# src/main/resources/openapi.yml
@@ -243,9 +243,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Account'
         '400':
-          description: Bad request - invalid input data
-        '409':
-          description: Conflict - account already exists
+          description: Bad Request - Invalid fields
+        '403':
+          description: Forbidden - Account with that username already exists
 
     put:
       tags:
@@ -269,7 +269,31 @@ paths:
         '400':
           description: Bad request - invalid input data
 
-  /account/delete/{username}:
+  /account/{username}:
+    get:
+      tags:
+        - Account
+      summary: Get an Account by id.
+      operationId: getAccountById
+      description: Retrieve an account from the database.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: string
+      responses:
+        '201':
+          description: Account retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Account'
+        '400':
+          description: Bad Request - Invalid input data
+        '404':
+          description: Not Found - Account could not be found
+
     delete:
       tags:
         - Account
